@@ -43,7 +43,7 @@ Perl::Tidy = 0
 Pod::Usage = 0
 
 [Prereqs / TestRequires]
-Test::More = 0
+Test::Class::Most = 0
 
 ; These need to be at the bottom
 [InstallGuide]
