@@ -1,0 +1,3 @@
+#!/usr/bin/perl
+use Mason::Tidy::t::CLI;
+Mason::Tidy::t::CLI->runtests;
