@@ -4,6 +4,9 @@ Revision history for Mason-Tidy
 
 2.51  Sep 12, 2012
 
+- Add get_options to parse argv outside CLI
+- Add Test::Class::Most dependency
+
 2.50  Sep 12, 2012
 
 - Increase version number to avoid indexing problems w/old Mason 2 distributions
